[package]
name = "smtool"
version = "0.1.0"
authors = ["veritius <veritiusgaming@gmail.com>"]
repository = "https://github.com/Veritius/smtool"
edition = "2021"
license = "MIT"
license-file = "LICENSE"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11.3"
walkdir = "2.5"
fastrand = "2"
reqwest = { version = "0.11", features = ["blocking"], optional = true }

[features]
default = ["cmds_web"]
cmds_web = ["dep:reqwest"]